--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,8 +28,12 @@ dependencies {
     implementation 'com.firebase:geofire-android:2.3.1'
     implementation 'com.google.firebase:firebase-auth:16.0.3'
     implementation 'com.google.firebase:firebase-database:16.0.1'
+    implementation 'com.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    implementation 'com.android.support:recyclerview-v7:27.1.0'
+    implementation 'com.android.support:gridlayout-v7:27.1.0'
+    implementation 'com.hbb20:ccp:2.2.2'
 }
 apply plugin: 'com.google.gms.google-services'
